force-app/main/default/objects/Subject__c/Subject__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>件名</label>
</CustomObject>