force-app/main/default/objects/Subject__c/fields/AgencyRegisterDecisionRealEstateSubject__c.field-meta.xml
<CustomField>
    <fullName>AgencyRegisterDecisionRealEstateSubject__c</fullName>
    <label>不動産決定物件登録Todo件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>