force-app/main/default/objects/Subject__c/fields/ExternalLinkAutonoticeToDoSubject__c.field-meta.xml
<CustomField>
    <fullName>ExternalLinkAutonoticeToDoSubject__c</fullName>
    <label>外部連絡時自動通知ToDo件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>