force-app/main/default/objects/Subject__c/fields/RegisterWithoutMediationTodoSubject__c.field-meta.xml
<CustomField>
    <fullName>RegisterWithoutMediationTodoSubject__c</fullName>
    <label>未斡旋依頼の決定物件登録Todo件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>